magic-cloud/magic-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magic-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magic-cloud
  template:
    metadata:
      labels:
        app: magic-cloud
    spec:
      containers:
        - name: magic-cloud
          image: paulinedav/magic-cloud
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: magic-cloud
spec:
  ports:
    - nodePort: 31281
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: magic-cloud
  type: NodePort
